@@ -257,7 +257,7 @@ char cval;
 
 
 
-void yyerror(char *s)
+void yyerror(const char *s)
 {
 	fprintf(stderr, "%s\n", s);
 }
